feat:second cat

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
 	<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 <body>
+
+	<div class="row">
+		<div class="col s12 m6">
+			<h5 id="cat1name" class="center"></h5>
+			<h5 class="center"><img id="cat" src="static\img\cat.jpg"></h5>
+			<h5 id="counter" class="center">Click Count: 0</h5>
+		</div>
+		<div class="col s12 m6">
+			<h5 id="cat2name" class="center"></h5>
+			<h5 class="center"><img id="cat2" src="static\img\cat2.jpg"></h5>
+			<h5 id="counter2" class="center">Click Count: 0</h5>
+		</div>
+	</div>
+
 	
-	<img id="cat" src="static\img\cat.jpg">
-	<div id="counter">Click Count: 0</div>
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 	<script src="static\js\js.js"></script>
